# mancp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mancp/: __init__.py  cli.py  registry.py  store.py  tui.py
tests/: test_cli.py  test_registry.py  test_store.py
